--- a/index.html
+++ b/index.html
@@ -1021,7 +1021,7 @@
                             <a href="https://twitter.com/jpngoga" class="twitter"><i class="fab fa-twitter"></i></a>
                             <a href="https://www.facebook.com/ngoga.jeanpaul/" class="facebook"><i class="fab fa-facebook"></i></a>
                             <a href="https://www.instagram.com/ngojepabilly/" class="instagram"><i class="fab fa-instagram"></i></a>
-                            <a href="https://github.com/jpngoga" class="fa-github-alt"><i class="fa-brands fa-github"></i></a>
+                            
 
                             <a href="https://www.linkedin.com/in/ngoga-jean-paul-billy-%E6%AF%94%E5%88%A9-1a7525111/" class="linkedin"><i class="fab fa-linkedin"></i></a>
                         </div>
@@ -1063,7 +1063,11 @@
                     <div class="error-message"></div>
                     <div class="sent-message">Your message has been sent. Thank you!</div>
                 </div>
-                <div class="text-center animate__animated animate__zoomIn animate__delay-1-5s"><a class="clickbtn">Send Message</a></div>
+                <div class="text-center input-control animate__animated animate__zoomIn animate__delay-1-5s">
+                    <button class="btn" type="submit"><a target="_blank" href="./formval/index.html">Send Message</a></button>
+
+
+                </div>
             </form>
             <div class="row mt-4">
 
